appId: so.tracking.app
---
- launchApp:
    stopApp: false
- extendedWaitUntil:
    visible: Home
    timeout: 120000
- tapOn: Profile
- scrollUntilVisible:
    element: Settings
    direction: UP
- tapOn: Settings
- scrollUntilVisible:
    element: Dark
    direction: DOWN
- tapOn: Dark
- scrollUntilVisible:
    element: Back
    direction: UP
- tapOn: Back
- runScript:
    file: reaction-people.js
    env:
      KIND: joint
- tapOn: Home
- swipe:
    start: 50%, 30%
    end: 50%, 75%
    duration: 600
- scrollUntilVisible:
    element:
      id: reaction-badge-🔥
    direction: DOWN
    centerElement: true
- takeScreenshot: reaction-badges-Dark
- tapOn:
    id: reaction-badge-🔥
- assertVisible:
    id: reaction-people
- assertVisible: "View @sam's profile"
- assertNotVisible: "View @alex's profile"
- tapOn: Show all reactions
- assertVisible: "View @alex's profile"
- takeScreenshot: reaction-people-Dark
- tapOn: Close reaction people
- assertNotVisible:
    id: reaction-people
- tapOn:
    id: reaction-badge-🔥
- assertVisible:
    id: reaction-people
- tapOn:
    point: 1%, 50%
- assertNotVisible:
    id: reaction-people
- tapOn: Profile
- scrollUntilVisible:
    element: Settings
    direction: UP
- tapOn: Settings
- scrollUntilVisible:
    element: Light
    direction: DOWN
- tapOn: Light
- scrollUntilVisible:
    element: Back
    direction: UP
- tapOn: Back
- runScript:
    file: reaction-people.js
    env:
      KIND: own
- tapOn: Home
- swipe:
    start: 50%, 30%
    end: 50%, 75%
    duration: 600
- scrollUntilVisible:
    element:
      id: reaction-badge-🔥
    direction: DOWN
    centerElement: true
- takeScreenshot: reaction-badges-Light
- tapOn:
    id: reaction-badge-🔥
- assertVisible:
    id: reaction-people
- assertVisible: "View @sam's profile"
- assertNotVisible: "View @alex's profile"
- tapOn: Show all reactions
- assertVisible: "View @alex's profile"
- takeScreenshot: reaction-people-Light
- tapOn: Close reaction people
- assertNotVisible:
    id: reaction-people
- tapOn:
    id: reaction-badge-🔥
- assertVisible:
    id: reaction-people
- tapOn:
    point: 1%, 50%
- assertNotVisible:
    id: reaction-people
- tapOn:
    id: reaction-badge-🔥
- tapOn: "View @sam's profile"
- assertNotVisible:
    id: reaction-people
- assertVisible: "@sam"
