appId: so.tracking.app
---
- launchApp:
    stopApp: false
- extendedWaitUntil:
    visible: Home
    timeout: 120000
- tapOn: Profile
- scrollUntilVisible:
    element: Settings
    direction: UP
- tapOn: Settings
- tapOn: Theme Mode
- scrollUntilVisible:
    element: Dark
    direction: DOWN
- tapOn: Dark
- tapOn: Close
- tapOn: Home
- scrollUntilVisible:
    element: Messages
    direction: UP
- tapOn: Messages
- tapOn: Message Helly, AI Coach
- waitForAnimationToEnd
- takeScreenshot: compact-action-dark
- tapOn:
    text: 'Review Running.*'
- waitForAnimationToEnd
- assertVisible: An easy run
- takeScreenshot: review-action-dark
- tapOn: Close Review Log
- waitForAnimationToEnd
- takeScreenshot: action-result-dark
- tapOn: Back to messages
- waitForAnimationToEnd
- tapOn: Back
- waitForAnimationToEnd
- tapOn: Profile
- scrollUntilVisible:
    element: Settings
    direction: UP
- tapOn: Settings
- tapOn: Theme Mode
- scrollUntilVisible:
    element: Light
    direction: DOWN
- tapOn: Light
- tapOn: Close
- tapOn: Home
- scrollUntilVisible:
    element: Messages
    direction: UP
- tapOn: Messages
- tapOn: Message Helly, AI Coach
- waitForAnimationToEnd
- takeScreenshot: compact-action-light
- tapOn:
    text: 'Review Running.*'
- waitForAnimationToEnd
- assertVisible: An easy run
- takeScreenshot: review-action-light
- tapOn: Accept Log
- waitForAnimationToEnd
- takeScreenshot: action-result-light
- tapOn: Back to messages
- waitForAnimationToEnd
- tapOn: Back
- waitForAnimationToEnd
